QVideoDecoder moved to DecoderThread.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="presentTab">
        <attribute name="title">
@@ -40,16 +40,16 @@
         <item row="0" column="0">
          <layout class="QGridLayout" name="presentGridLayout">
           <property name="leftMargin">
-           <number>9</number>
+           <number>0</number>
           </property>
           <property name="topMargin">
-           <number>9</number>
+           <number>0</number>
           </property>
           <property name="rightMargin">
-           <number>9</number>
+           <number>0</number>
           </property>
           <property name="bottomMargin">
-           <number>9</number>
+           <number>0</number>
           </property>
          </layout>
         </item>
@@ -59,6 +59,11 @@
        <attribute name="title">
         <string>Process</string>
        </attribute>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <layout class="QGridLayout" name="processGridLayout"/>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
